[package]
name = "plaintalk"
description = "A library for parsing and generating PlainTalk"
repository = "https://github.com/maghoff/plaintalk"
readme = "README.md"
documentation = "http://magnushoff.com/plaintalk/introduction-and-definition.html"
keywords = ["network", "protocol"]
version = "0.0.8"
authors = ["Magnus Hoff <maghoff@gmail.com>"]
license = "MIT"

[dependencies]
num = "~0.1"
